Manual: added a thomas citation

--- a/doc/manual/Magentix2UM.bib
+++ b/doc/manual/Magentix2UM.bib
@@ -4,7 +4,16 @@
 %% Incoporar las referncias por orden alfabético, en cada uno de los apartados que se proporcionan
 
 %A
-
+@article{Argente2011,
+   author = "E. Argente and V. Botti and C. Carrascosa and A. Giret and V. Julian and M. Rebollo",
+   title = "{A}n {A}bstract {A}rchitecture for {V}irtual {O}rganizations: {T}he {THOMAS} approach",
+   journal = "Knowledge and Information Systems",
+   year = "2011",
+   publisher = "Springer",
+   volume = "29",
+   number = "2",
+   pages = "379--403"
+}
 %B
 @article{bordini05,
   title={{Jason and the Golden Fleece of agent-oriented programming}},
