Magentix2 user's manual: introducction updated with the new structure; explanation about queue Agents recovered; New cover;

--- a/doc/manual/HTTPInterface/HTTPInterface.tex
+++ b/doc/manual/HTTPInterface/HTTPInterface.tex
@@ -1,4 +1,4 @@
-\chapter{HTTP Interface}
+\chapter{HTTP Interface} \label{chap:HTTPInterface}
 In order to allow interaction between a Magentix2 agent and the outside world, an HTTP interface service has been developed. The service is automatically started when the StartMagentix.sh script is executed, so no special action is required. A common use for the HTTP Interface service is a webpage that allows its users to monitor and interact with the agents running in Magentix2. The examples in this section show how to interact with Magentix2 agents using a web page and using Javascript and PHP. However, the use of the HTTP interface is not exclusive for web pages and can be used in other scenarios.
 \begin{figure}
 	\centering
