--- a/doc/manual/InternalCover/InternalCover.tex
+++ b/doc/manual/InternalCover/InternalCover.tex
@@ -10,11 +10,14 @@
        
        {\Large 
         
+	     Jos\'{e} Alemany -jalemany1@dsic.upv.es\\         
          Joan Bellver - jbellver@dsic.upv.es\\
          Luis B\'{u}rdalo Rapa - lburdalo@dsic.upv.es\\
          Agustín Espinosa - aespinos@dsic.upv.es\\
          Juan A. Garc\'{i}a-Pardo - jgarciapardo@dsic.upv.es\\
          Jaume Jordan - jjordan@dsic.upv.es\\
+         Javier Jorge -jjorge@dsic.upv.es \\
+         Javier Palanca -jpalanca@dsic.upv.es\\
          Mart\`{i} Navarro - mnavarro@dsic.upv.es\\
          Ricard L\'{opez} - rlopez@dsic.upv.es\\
          Soledad Valero - svalero@dsic.upv.es \\
@@ -24,6 +27,6 @@
        \vspace*{1cm}
  
       	\includegraphics[width=0.7\textwidth]{InternalCover/images/GTIIA_V2_RGB.jpg}\\[3cm]
-       {\Large February 2012}
+       {\Large July 2014}
        \end{center}  
    \end{titlepage}
