--- a/doc/manual/Introduction/Introduction.tex
+++ b/doc/manual/Introduction/Introduction.tex
@@ -21,14 +21,26 @@ In the following chapters, how Magentix2 platform must be installed, configured 
 
 Specifically, chapter \ref{chap:quickstart} clarifies how Magentix2 can be fully installed in only one host in a quickly and easy way. Furthermore, it is also explained how to develop and to execute simple Magentix2 agents. 
 
-Chapter  \ref{chap:programmingAgents} is about programming aspects in Magentix2. Thus, it is possible to consult in this chapter:  the basic and more advanced classes of agents that the platform provides; the main issues related with agent communication; how to program agents in a secure environment; and finally, how agents can share information in an indirect way by means of the tracing service provide by Magentix2.
+Chapter  \ref{chap:programmingAgents} is about programming aspects in Magentix2. Specifically, it is possible to consult  the basic classes of agents that the platform provides and the main issues related with agent communication. 
+
+The advanced conversational agents class is explained in chapter \ref{sec:CAgents}. These agents enable the participation on simultaneous  conversations based on interaction protocols.
+
+In chapter \ref{chap:JasonAgents} how to program BDI agents in Magentix2 is explained. Thus, Magentix2 provides the classes jasonAgent and MagentixAgArch, which enables programming agents in AgentSpeak and run them in the Magentix2 platform. 
+
+The argumentation API provided by Magentix2 is shown in chapter \ref{sec:introductionArgAgents}. This API allows agents to engage in argumentation dialogues to reach agreements about the best solution to a problem. 
+
+
+Chapter \ref{sec:tracingService} explains how agents can share information in an indirect way by means of the tracing service provide by Magentix2.
  
 
 
 
-Chapter \ref{chap:VirtualOrganizations} explains the support for virtual organizations provided by the Magentix2 platform. In this way, this chapter gives details about how the \textsc{THOMAS} (Methods, Techniques and Tools for Open Multi-Agent Systems) framework has been integrated with Magentx2, and how Magentix2 agents can use it. 
+Chapter \ref{chap:VirtualOrganizations} explains in detail the support for virtual organizations provided by the Magentix2 platform. In this way, this chapter gives details about how the \textsc{THOMAS} (Methods, Techniques and Tools for Open Multi-Agent Systems) framework has been integrated with Magentx2, and how Magentix2 agents can use it. 
 
-In order to customize the Magentix2 platform installation or distribute it in diverse hosts, the chapter \ref{chap:PlatformAdministration} should be consulted. Concretely, this chapter is about administration and configuration aspects related with the different components of the platform: Apache Qpid, the implementation of AMQP (Advanced Message Queuing Protocol) used for agent communication; MySQL, the database server used to maintain persistent information about the virtual organizations manage by the platform; Apache Tomcat, which allows agents to access to and provide standard Java web services; Magentix2 platform services, such as the services which allows the communications with external agents or with the \textsc{THOMAS} framework; and the security module, which provides key features regarding security, privacy, openness and interoperability.
+Chapter \ref{chap:HTTPInterface} is about describes the HTTP service supplied by Magentix2 in order to facilitate the interaction between Magentix2 agents and the outside world.
+
+
+In order to customize the Magentix2 platform installation or distribute it in diverse hosts, the chapter \ref{chap:PlatformAdministration} should be consulted. Concretely, this chapter is about administration and configuration aspects related with the different components of the platform: Apache Qpid, the implementation of AMQP (Advanced Message Queuing Protocol) used for agent communication; MySQL, the database server used to maintain persistent information about the virtual organizations manage by the platform; Apache Tomcat, which allows agents to access to and provide standard Java web services; and  advanced Magentix2 platform services, such as the services which allows the communications with external agents or with the \textsc{THOMAS} framework. %; and the security module, which provides key features regarding security, privacy, openness and interoperability.
 
  
 
